// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> ColorVariants story renders snapshot 1`] = `
<div
  class="tagList"
>
  <span
    class="tag tag--neutral text text--sm text--bold-weight"
  >
    <span
      class="tag__body"
    >
      neutral
    </span>
  </span>
  <span
    class="tag tag--error text text--sm text--bold-weight"
  >
    <span
      class="tag__body"
    >
      error
    </span>
  </span>
  <span
    class="tag tag--success text text--sm text--bold-weight"
  >
    <span
      class="tag__body"
    >
      success
    </span>
  </span>
  <span
    class="tag tag--warning text text--sm text--bold-weight"
  >
    <span
      class="tag__body"
    >
      warning
    </span>
  </span>
  <span
    class="tag tag--yield text text--sm text--bold-weight"
  >
    <span
      class="tag__body"
    >
      yield
    </span>
  </span>
  <span
    class="tag tag--brand text text--sm text--bold-weight"
  >
    <span
      class="tag__body"
    >
      brand
    </span>
  </span>
</div>
`;

exports[`<Tag /> Default story renders snapshot 1`] = `
<span
  class="tag tag--neutral text text--sm text--bold-weight"
>
  <span
    class="tag__body"
  >
    Tag text
  </span>
</span>
`;

exports[`<Tag /> OutlineVariants story renders snapshot 1`] = `
<div
  class="tagList"
>
  <span
    class="tag tag--neutral tag--outline text text--sm text--bold-weight"
  >
    <span
      class="tag__body"
    >
      neutral
    </span>
  </span>
  <span
    class="tag tag--error tag--outline text text--sm text--bold-weight"
  >
    <span
      class="tag__body"
    >
      error
    </span>
  </span>
  <span
    class="tag tag--success tag--outline text text--sm text--bold-weight"
  >
    <span
      class="tag__body"
    >
      success
    </span>
  </span>
  <span
    class="tag tag--warning tag--outline text text--sm text--bold-weight"
  >
    <span
      class="tag__body"
    >
      warning
    </span>
  </span>
  <span
    class="tag tag--yield tag--outline text text--sm text--bold-weight"
  >
    <span
      class="tag__body"
    >
      yield
    </span>
  </span>
  <span
    class="tag tag--brand tag--outline text text--sm text--bold-weight"
  >
    <span
      class="tag__body"
    >
      brand
    </span>
  </span>
</div>
`;

exports[`<Tag /> WithIcon story renders snapshot 1`] = `
<div
  class="tagList"
>
  <span
    class="tag tag--neutral tag--outline text text--sm text--bold-weight"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#favorite"
      />
    </svg>
    <span
      class="tag__body"
    >
      neutral
    </span>
  </span>
  <span
    class="tag tag--error tag--outline text text--sm text--bold-weight"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#favorite"
      />
    </svg>
    <span
      class="tag__body"
    >
      error
    </span>
  </span>
  <span
    class="tag tag--success tag--outline text text--sm text--bold-weight"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#favorite"
      />
    </svg>
    <span
      class="tag__body"
    >
      success
    </span>
  </span>
  <span
    class="tag tag--warning tag--outline text text--sm text--bold-weight"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#favorite"
      />
    </svg>
    <span
      class="tag__body"
    >
      warning
    </span>
  </span>
  <span
    class="tag tag--yield tag--outline text text--sm text--bold-weight"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#favorite"
      />
    </svg>
    <span
      class="tag__body"
    >
      yield
    </span>
  </span>
  <span
    class="tag tag--brand tag--outline text text--sm text--bold-weight"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#favorite"
      />
    </svg>
    <span
      class="tag__body"
    >
      brand
    </span>
  </span>
</div>
`;

exports[`<Tag /> WithLongTextAndIcon story renders snapshot 1`] = `
<div
  class="tagList"
>
  <span
    class="tag tag--neutral tag--outline text text--sm text--bold-weight"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#star"
      />
    </svg>
    <span
      class="tag__body"
    >
      This tag has a really long text message
    </span>
  </span>
  <span
    class="tag tag--error tag--outline text text--sm text--bold-weight"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#star"
      />
    </svg>
    <span
      class="tag__body"
    >
      This tag has a really long text message
    </span>
  </span>
  <span
    class="tag tag--success tag--outline text text--sm text--bold-weight"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#star"
      />
    </svg>
    <span
      class="tag__body"
    >
      This tag has a really long text message
    </span>
  </span>
  <span
    class="tag tag--warning tag--outline text text--sm text--bold-weight"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#star"
      />
    </svg>
    <span
      class="tag__body"
    >
      This tag has a really long text message
    </span>
  </span>
  <span
    class="tag tag--yield tag--outline text text--sm text--bold-weight"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#star"
      />
    </svg>
    <span
      class="tag__body"
    >
      This tag has a really long text message
    </span>
  </span>
  <span
    class="tag tag--brand tag--outline text text--sm text--bold-weight"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#star"
      />
    </svg>
    <span
      class="tag__body"
    >
      This tag has a really long text message
    </span>
  </span>
</div>
`;
